Stock image background for index

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -32,6 +32,12 @@
                 margin-top: 90px;
                 margin: 50px;
             }
+            body {
+                background-image: url(styles/images/TestStockImage.jpg);
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: 100% 100%;
+            }
         </style>
     </head>
     <div class="navbar">
@@ -45,7 +51,10 @@
         <body>
             <h1>Title</h1>
             <p>
-                this is some text
+                This is some text
+            </p>
+            <p>
+                This is some text
             </p>
         </body>
     </div>
