Changed to external css from internal

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -1,44 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            /* Navbar */
-            .navbar {
-                overflow:hidden;
-                background-color: #333;
-                position: fixed;
-                top: 0;
-                width: 100%;
-            }
-
-            /* navbar links */
-            .navbar a {
-                float: right;
-                display: block;
-                color: #f2f2f2;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-
-            .navbar a:hover {
-                background: rgb(7, 226, 255);
-                color: black;
-            }
-
-            /* Main Content */
-
-            .Main {
-                margin-top: 90px;
-                margin: 50px;
-            }
-            body {
-                background-image: url(styles/images/TestStockImage.jpg);
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-size: 100% 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <div class="navbar">
         <a href="#enhancements">Enhancements</a>
