basic footer for Index

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -19,6 +19,16 @@
             <p>
                 This is some text
             </p>
+        </div>
+        <div class="footer">
+            <footer>
+                <a href="#studentid_name1">Studentid/name1</a>
+                <a href="#studentid_name2">Studentid/name2</a>
+                <a href="#studentid_name3">Studentid/name3</a>
+                <a href="#studentid_name4">Studentid/name4</a>
+                <a href="#studentid_name5">Studentid/name5</a>
+            </footer>
+        </div>
         </body>
-    </div>
+
 </html>
