[F] - fixed index.html to match modified css

--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -24,6 +24,10 @@
 						<label for="toggleMode" id="toggleDark">Dark Mode</label>
 						<label for="toggleMode" id="toggleLight">Light Mode</label>
 					</li>
+					<li><a href="#enhancements">Enhancements</a></li>
+                    <li><a href="#quiz">Quiz</a></li>
+                    <li><a href="#topic">Topic</a></li>
+                    <li><a href="#home">Home</a></li>
 				</ul>
 			</nav>
 		</header>
