--- a/assign1/index.html
+++ b/assign1/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/style.css">
+        <meta charset="utf-8"/>
+		<meta name="description" content="APNG homepage"/>
+		<meta name="keywords" content="APNG, animated portable network graphics, homepage"/>
+		<meta name="author" content="Jack"/>
+		<meta name="viewport" content="width=device-width" initial-scale="1">
+		<link href="styles/style.css" rel="stylesheet">
+        <title>Homepage</title>
     </head>
-    <div class="navbar">
-        <a href="#enhancements">Enhancements</a>
-        <a href="#quiz">Quiz</a>
-        <a href="#topic">Topic</a>        
-        <a href="#home">Home</a>
-    </div>
-
-    <di class="Main">
-        <body>
+    <body>
+        <header>
+			<nav>
+				<ul>
+                    <li><a href="#enhancements">Enhancements</a></li>
+                    <li><a href="#quiz">Quiz</a></li>
+                    <li><a href="#topic">Topic</a></li>
+                    <li><a href="#home">Home</a></li>
+				</ul>
+			</nav>
+		</header>
+        <main>
             <h1>Title</h1>
-            <p>
-                This is some text
-            </p>
-            <p>
-                This is some text
-            </p>
-        </div>
-        <div class="footer">
-            <footer>
-                <a href="#studentid_name1">Studentid/name1</a>
-                <a href="#studentid_name2">Studentid/name2</a>
-                <a href="#studentid_name3">Studentid/name3</a>
-                <a href="#studentid_name4">Studentid/name4</a>
-                <a href="#studentid_name5">Studentid/name5</a>
-            </footer>
-        </div>
-        </body>
-
+            <p>This is some text</p>
+        </main>
+        <footer>
+            <a href="#studentid_name1">Studentid/name1</a>
+            <a href="#studentid_name2">Studentid/name2</a>
+            <a href="#studentid_name3">Studentid/name3</a>
+            <a href="#studentid_name4">Studentid/name4</a>
+            <a href="#studentid_name5">Studentid/name5</a>
+        </footer>
+    </body>
 </html>
