[A] - addition of header, dark mode button
Footer is still amiss

--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -19,7 +19,7 @@
 		<header>
 			<nav>
 				<ul>
-					<li>
+					<li id="toggler">
 						<!-- Dark mode toggler -->
 						<label for="toggleMode" id="toggleDark">Dark Mode</label>
 						<label for="toggleMode" id="toggleLight">Light Mode</label>
