--- a/assign1/index.html
+++ b/assign1/index.html
@@ -10,10 +10,15 @@
         <title>Homepage</title>
     </head>
     <body>
+        <input type="checkbox" id="toggleMode">
         <header>
 			<nav>
 				<ul>
-                    <li><a href="#enhancements">Enhancements</a></li>
+					<li>
+						<label for="toggleMode" id="toggleDark">Dark Mode</label>
+						<label for="toggleMode" id="toggleLight">Light Mode</label>
+					</li>
+					<li><a href="#enhancements">Enhancements</a></li>
                     <li><a href="#quiz">Quiz</a></li>
                     <li><a href="#topic">Topic</a></li>
                     <li><a href="#home">Home</a></li>
@@ -21,8 +26,12 @@
 			</nav>
 		</header>
         <main>
-            <h1>Title</h1>
-            <p>This is some text</p>
+            <h1>Animated Portable Network Graphics</h1>
+            <p>
+                Animated Portable Network Graphics or APNG for short
+                
+
+            </p>
         </main>
         <footer>
             <a href="#studentid_name1">Studentid/name1</a>
