Added page links and header/css link to topic.html

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -18,10 +18,10 @@
 						<label for="toggleMode" id="toggleDark">Dark Mode</label>
 						<label for="toggleMode" id="toggleLight">Light Mode</label>
 					</li>
-					<li><a href="#enhancements">Enhancements</a></li>
-                    <li><a href="#quiz">Quiz</a></li>
-                    <li><a href="#topic">Topic</a></li>
-                    <li><a href="#home">Home</a></li>
+					<li><a href="enhancements.html">Enhancements</a></li>
+                    <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="topic.html">Topic</a></li>
+                    <li><a href="index.html">Home</a></li>
 				</ul>
 			</nav>
 		</header>
