--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -1,9 +1,25 @@
 <html>
 <head>
+  <link href="styles/style.css" rel="stylesheet">
 </head>
-
-
+<!--added header info to page and css link-->
 <body>
+  <input type="checkbox" id="toggleMode">
+        <header>
+			<nav>
+				<ul>
+					<li>
+						<label for="toggleMode" id="toggleDark">Dark Mode</label>
+						<label for="toggleMode" id="toggleLight">Light Mode</label>
+					</li>
+					<li><a href="enhancements.html">Enhancements</a></li>
+                    <li><a href="quiz.html">Quiz</a></li>
+                    <li><a href="topic.html">Topic</a></li>
+                    <li><a href="index.html">Home</a></li>
+				</ul>
+			</nav>
+		</header>
+    
 <h1>APNG rules!</h1>
 <hr>
 <h2>why APNG rules</h2>
