[D] - debugged: apply correct id to index

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -14,7 +14,7 @@
         <header>
 			<nav>
 				<ul>
-					<li>
+					<li id="toggler">
 						<label for="toggleMode" id="toggleDark">Dark Mode</label>
 						<label for="toggleMode" id="toggleLight">Light Mode</label>
 					</li>
@@ -25,12 +25,10 @@
 				</ul>
 			</nav>
 		</header>
-        <main>
+        <main id="bg-container">
             <h1>Animated Portable Network Graphics</h1>
             <p>
                 Animated Portable Network Graphics or APNG for short
-                
-
             </p>
         </main>
         <footer>
