--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -168,15 +168,12 @@
 
 		<!-- Footer -->
 		<footer>
-			<hr/>
-			<a>
-				Jacky Yao 103936755
-				Jack Davies 103622407
-				Thien An Ly 103499753
-				Ravish Randev Kulathanthilage 103800614
-				Jian Jia Ng 103840759
-			</a>
-		</footer>
+            <a href="#studentid_name1">Studentid/name1</a>
+            <a href="#studentid_name2">Studentid/name2</a>
+            <a href="#studentid_name3">Studentid/name3</a>
+            <a href="#studentid_name4">Studentid/name4</a>
+            <a href="#studentid_name5">Studentid/name5</a>
+        </footer>
 
 	</body>
 	
