--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -1,46 +1,38 @@
 <html>
 <head>
-  <link href="styles/style.css" rel="stylesheet">
 </head>
-<!--added header info to page and css link-->
+
+
 <body>
-  <input type="checkbox" id="toggleMode">
-        <header>
-			<nav>
-				<ul>
-					<li>
-						<label for="toggleMode" id="toggleDark">Dark Mode</label>
-						<label for="toggleMode" id="toggleLight">Light Mode</label>
-					</li>
-					<li><a href="enhancements.html">Enhancements</a></li>
-                    <li><a href="quiz.html">Quiz</a></li>
-                    <li><a href="topic.html">Topic</a></li>
-                    <li><a href="index.html">Home</a></li>
-				</ul>
-			</nav>
-		</header>
-    
 <h1>APNG rules!</h1>
 <hr>
-<h2>why APNG rules</h2>
+<h2>What is it?</h2>
 
 <P>
-Dantooine. They're on Dantooine. Remember, a Jedi can feel the Force flowing through him. The more you tighten your grip, Tarkin, the more star systems will slip through your fingers. You're all clear, kid. Let's blow this thing and go home!
+It extends the popular Portable Network Graphics (PNG) file format specification to allow images to be animated similarly to animated GIF files with additional features.
 
-All right. Well, take care of yourself, Han. I guess that's what you're best at, ain't it? In my experience, there is no such thing as luck. Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense.
-</p>
+The first frame of an APNG file is stored as a normal PNG. Since it is an extension of PNG, most standard decoders will be able to display the file without additional work.
 
-<p>
-I need your help, Luke. She needs your help. I'm getting too old for this sort of thing.
-What?! He is here. I care. So, what do you think of her, Han? The more you tighten your grip, Tarkin, the more star systems will slip through your fingers. Ye-ha! Partially, but it also obeys your commands.
+Basically it is a PNG file with additional chunks of data to allow for animations
 
-I don't know what you're talking about. I am a member of the Imperial Senate on a diplomatic mission to Alderaan--
-Alderaan? I'm not going to Alderaan. I've got to go home. It's late, I'm in for it as it is.
-You are a part of the Rebel Alliance and a traitor! Take her away!
 </p>
 <hr>
 
-<h2>why APNG is outdated now?!</h2>
+<h2>Why does it exist?</h2>
+<h3>History</h3>
+<p>It was first developed by Mozilla Corporation in 2004 to store animations needed in UIs (e.g. loading throbbers) to replace MNG animations which were deprecated the year before. MNGs had less functionality than APNGs with a much larger file size due to their decoder, the thing that will read the read and extract headers from the sequence of bytes.</p>
+<h3>Why isn't it more mainstream?</h3>
+<p>APNG had a lukewarm reception on release as maintainers on the PNG format debated that their format was strictly a single-image format and it was seen as such in the wider community. The rationale was that applications do not need and will not support multiple images per file due to having separate file formats for animations because a single image and a sequence of images are fundamentally used differently.
+</p>
+<p>The only way for a software to correctly distinguish between PNG and APNG is by reading the ancillary chunks which aren’t required to use PNGs, so if a software didn’t know about APNGs, the first frame would show up as a typical PNG.
+</p>
+<p>So with the maintainers of the file format against the idea of this implementation and the data of the animation hidden inside ancillary chunks that decoders used in applications could skip, APNG never grew in popularity. 
+</p>
+<hr>
+<h2>Features/How does it work?</h2>
+<h3>File structure</h3>
+<p>Since the APNG is an extension on the PNG file format, the base structure of the file/datastream is the same.</p>
+
 <img src="salt_man.png" alt="idiot man throwing salt around" style="float:right">
 <p>
 I need your help, Luke. She needs your help. I'm getting too old for this sort of thing. Dantooine. They're on Dantooine. Dantooine. They're on Dantooine. Oh God, my uncle. How am I ever gonna explain this?
@@ -78,4 +70,47 @@ so what is star wars all about?
 <br>
 
 <hr>
+
 <table>
+  <tr>
+    <th>browsers</th>
+    <th>versions</th>
+  </tr>
+  <tr>
+    <td>Google Chrome</td>
+    <td>96-102</td>
+  </tr>
+  <tr>
+    <td>Firefox</td>
+    <td>96-100</td>
+  </tr>
+  <tr>
+    <td>Microsoft Edge</td>
+    <td>97-99</td>
+  </tr>
+  <tr>
+    <td>Safari</td>
+    <td>14.1-15.4</td>
+  </tr>
+  <tr>
+    <td>Opera</td>
+    <td>11</td>
+  </tr>
+  <tr>
+    <td>Safari on IOS</td>
+    <td>12.5-15.4</td>
+  </tr>
+  <tr>
+    <td>Chrome for android</td>
+    <td>99</td>
+  </tr>
+  <tr>
+    <td>Samsung internet</td>
+    <td>16</td>
+  </tr>
+  <tr>
+	<td>Internet Explorer</td> <!--are we gonna highlight cell red?-->
+    <td>not supported</td>
+  </tr>
+ </table> 
+  
