Added intro text

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -27,18 +27,31 @@
 		</header>
         <main>
             <h1>Animated Portable Network Graphics</h1>
+            <br>
             <p>
-                Animated Portable Network Graphics or APNG for short
-                
-
+                Animated Portable Network Graphics or .APNG for short
+                is a file format which originates from Portable Network Graphics (.PNG) 
+                but allows animated images that work similarly to animated .GIF files.
             </p>
+            <br>
+            <p>
+                By exploring this website you learn more about the .APNG file type and how 
+                its used. To Learn more head to the <a href="topic.html">Topic page</a>.
+            </p>
+            <br>
+            <p>
+                After reading the information on the topic page head over 
+                to the <a href="quiz.html">quiz</a> to test you knowledge.
+            </p>
+            <br>
         </main>
         <footer>
-            <a href="#studentid_name1">Studentid/name1</a>
-            <a href="#studentid_name2">Studentid/name2</a>
-            <a href="#studentid_name3">Studentid/name3</a>
-            <a href="#studentid_name4">Studentid/name4</a>
-            <a href="#studentid_name5">Studentid/name5</a>
+            <hr/>
+            <a href="#studentid_name1">103936755 - Jacky Yao</a>
+            <a href="#studentid_name2">103622407 - Jack Davies</a>
+            <a href="#studentid_name3">103499753 - Thien An Ly</a>
+            <a href="#studentid_name4">103800614 - Ravish Randev Kulathanthilage</a>
+            <a href="#studentid_name5">103840759 - Jian Jia Ng</a>
         </footer>
     </body>
 </html>
