--- a/assign1/index.html
+++ b/assign1/index.html
@@ -36,12 +36,12 @@
             <br>
             <p>
                 By exploring this website you learn more about the .APNG file type and how 
-                its used. To Learn more head to the <a href="topic.html">Topic page</a>.
+                its used. To Learn more head to the <button><a href="topic.html"> Topic page</a></button>
             </p>
             <br>
             <p>
                 After reading the information on the topic page head over 
-                to the <a href="quiz.html">quiz</a> to test you knowledge.
+                to the <button><a href="quiz.html">quiz</a></button> to test you knowledge.
             </p>
             <br>
         </main>
