[C] - change button layout of index.html

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -27,26 +27,18 @@
 		</header>
         <main id="bg-container">
             <h1>Animated Portable Network Graphics</h1>
-            <br>
             <p>
                 Animated Portable Network Graphics or .APNG for short
                 is a file format which originates from Portable Network Graphics (.PNG) 
                 but allows animated images that work similarly to animated .GIF files.
-            </p>
-            <br>
-            <p>
                 By exploring this website you learn more about the .APNG file type and how 
-                its used. To Learn more head to the <button><a href="topic.html"> Topic page</a></button>
+                its used.
             </p>
-            <br>
-            <p>
-                After reading the information on the topic page head over 
-                to the <button><a href="quiz.html">quiz</a></button> to test you knowledge.
-            </p>
-            <br>
+            <div id="learn-more">
+                <a href="topic.html">Learn more</a>
+            </div>
         </main>
         <footer>
-            <hr/>
             <a href="#studentid_name1">103936755 - Jacky Yao</a>
             <a href="#studentid_name2">103622407 - Jack Davies</a>
             <a href="#studentid_name3">103499753 - Thien An Ly</a>
